--- a/situations/Получил_по_голове_красным_плодом.yml
+++ b/situations/Получил_по_голове_красным_плодом.yml
@@ -3,5 +3,5 @@ text: |
   Вы решили, что умнее будет потрясти дерево, чтобы плоды упали к вам прямо в руки. Вы набираетесь решительности и наконец хватаете толстый ствол тропического дерева и начинаете сильно трясти его, пытаясь добыть хотя бы один румяный плод.
   Вы продолжаете это делать в течении 5 минут, пока вы наконеч совсем не выбились из сил. Руки, в кусочках коры и ссадинах трясутся и вы садитесь под дерево. Вы слышите громкий свист. Вы поднимаете лицо и не успеваете понять, что происходит. Последнее, что вы увидели - это красный плод, который несётся со страшной скоростью прямо вам на голову.
 actions: 
-- text: Потерять сознание
+- text: Быть расплющенным красным плодом
   situation: Конец_игры
