ваня попилил ситуации

--- a/situations/Первое_утро_на_острове.yml
+++ b/situations/Первое_утро_на_острове.yml
@@ -9,4 +9,4 @@ actions:
 - text: Осмотреть корабль
   situation: Осмотр_корабля
 - text: Развести костёр (требуется трут и хворост)
-  situation: ПУСТО
+  situation: Развёл_костёр
