--- a/situations/Спасся_в_обломках.yml
+++ b/situations/Спасся_в_обломках.yml
@@ -3,8 +3,6 @@ actions:
   situation: Первое_утро_на_острове
   
 text: |
-  ПОЛЗТИ К ОБЛОМКАМ
-
   Вы перекатываетесь на бок, и первый же рывок вперёд отзывается в теле жгучей болью — песок въедается в ссадины, но жажда и инстинкт выживания сильнее.
 
   Метр за метром, цепляясь локтями за мокрый песок, вы ползёте к груде обломков. В ушах стучит кровь, но сквозь шум прибоя уже слышно дребезжание металла — волны шевелят какие-то детали...
@@ -16,12 +14,9 @@ text: |
 
   2️⃣ Еда
   Развороченный деревянный ящик хранит:
-
-  Соль (испорчена водой)
-
-  Сушёную рыбу в промасленной тряпице — жёсткую, как кожа, но съедобную
-
-  Горсть орехов в герметичном мешочке — их вы жадно запихиваете в рот, не разжёвывая
+  - Соль (испорчена водой)
+  - Сушёную рыбу в промасленной тряпице — жёсткую, как кожа, но съедобную
+  - Горсть орехов в герметичном мешочке — их вы жадно запихиваете в рот, не разжёвывая
 
   3️⃣ Ром
   Разбитая бутылка, но одна уцелела — толстое стекло уберегло её. Пару глотков обжигающего рома — и тепло растекается по телу, притупляя боль.
@@ -32,13 +27,9 @@ text: |
   НОЧЬ
 
   Вы забираетесь под навес из досок, прижимая к себе флягу и мешочек с орехами. Волны теперь звучат глуше, а звёзды (такие яркие, будто их прокололи иглой в чёрном пологе) мерцают сквозь щели.
-
   Где-то в джунглях кричит невидимое существо — но вам уже всё равно. Выжили. Хотя бы на сегодня.
-
   Что дальше?
 
   Утром осмотреть обломки тщательнее (может, есть инструменты?)
-
   Идти в джунгли — искать источник пресной воды
-
   Развести костёр из обломков (если найдёте трут)
