ваня еще проработал

--- a/situations/Найти_в_джунглях_красные_плоды.yml
+++ b/situations/Найти_в_джунглях_красные_плоды.yml
@@ -6,4 +6,4 @@ actions:
 - text: Трясти дерево
   situation: Получил_по_голове_красным_плодом
 - text: Пойти дальше
-  situation: ПУСТО
+  situation: Пошёл_дальше_и_был_задавлен_пальмой
