--- a/situations/Пошёл_дальше_и_погиб_в_схватке_с_тигром.yml
+++ b/situations/Пошёл_дальше_и_погиб_в_схватке_с_тигром.yml
@@ -1,9 +1,11 @@
 text: |
   Ты решил пойти дальше и найти источник пресной воды. Ты заранее подготовил флягу из-под воды. 
+  Идя всперёд ты заметил лежащую  на тропинке пальму.
   Внезапно ты услышал рёв. Звук приближался. Ты схватил перочинный ножик и спрятался за деревом. Рык приближался.
   Вдруг на тропинке появился тигр. Он принюхивался к добыче и его нос повернулся на дерево, за которым ты спрятался.
   Ты резко выскочил из укрытия и побежал по тропинке к берегу.
-  Но хищник был быстрее.
+  Ты забыл про пальму, споткнулся и упал.
+  Это было твоё последнеее падение.
 
 actions:
 - text: Конец игры
