Первая версия телеграм бота

--- a/situations/Второе_утро_на_острове.yml
+++ b/situations/Второе_утро_на_острове.yml
@@ -3,10 +3,10 @@ text: |
   Надо найти трюм. Трюм скорее всего находится в море. Чтобы его найти, надо соорудить плот, и сделать это как можно скорее.
   Нос корабля был найден, и вы в нём уже сделали себе ночлег и соорудили запас еды. Но это вас не остановило. Вы решили: если отправиться в джунгли, опасности не будет. Все звери спят. 
   Надо собрать плодов и попытаться найти кокосы. Это тропический остров, а кокосовая вода - почти единственный источник питья.
-  Вы перекусили орешками и сухофтруктами, сьели пару долек тропического красного фрукта, как вы его назвали "Румянчик", и захватили с собой флягу.
+  Вы перекусили орешками и сухофтруктами, сьели пару долек тропического красного фрукта, как вы его назвали "красноплод", и захватили с собой флягу.
 
 actions:
 - text: Отправиться в джунгли
-  situation: Отправился_в_джунгли_и_нашёл_кокосы_и_родник
+  next: Отправился_в_джунгли_и_нашёл_кокосы_и_родник
 - text: Отправиться в море на поиски трюма
-  situation: Отправился_в_море_и_погиб_от_акулы
+  next: Отправился_в_море_и_погиб_от_акулы
