--- a/situations/Начало.yml
+++ b/situations/Начало.yml
@@ -1,6 +1,6 @@
 actions: 
 - text: Собрав остатки сил с трудом открыть глаза и приподнять голову чтобы немного осмотреться...
-  situation: Попытка_открыть_глаза
+  next: Попытка_открыть_глаза
 
 text: |
   Сознание возвращается медленно, сквозь густой туман боли.
