--- a/situations/Осмотрелся_и_собрал_плоды.yml
+++ b/situations/Осмотрелся_и_собрал_плоды.yml
@@ -3,6 +3,6 @@ text: |
   Вашему взору открылись горы, которые были в конце джунглей. Но джунгли оказались очень большими, и чтобы добраться до гор, нужно пересечь все джунгли. Крик в ночи оставлял мысли о том, что на острове могут обитать хищники. Вы слезли с дерева и ступили на рыхлую джунглевую почву.
 actions: 
 - text: Пойти дальше
-  situation: Пошёл_дальше_и_погиб_в_схватке_с_тигром
+  next: Пошёл_дальше_и_погиб_в_схватке_с_тигром
 - text: Вернуться к берегу
-  situation: Вернулся_обратно_и_осмотрел_корабль
+  next: Вернулся_обратно_и_осмотрел_корабль
