--- a/situations/Первое_утро_на_острове.yml
+++ b/situations/Первое_утро_на_острове.yml
@@ -5,8 +5,8 @@ text: |
 
 actions: 
 - text: Пойти в джунгли, на поиски воды и пищи
-  situation: Найти_в_джунглях_красные_плоды
+  next: Найти_в_джунглях_красные_плоды
 - text: Осмотреть корабль
-  situation: Осмотр_корабля
+  next: Осмотр_корабля
 - text: Развести костёр (требуется трут и хворост)
-  situation: Развёл_костёр
+  next: Развёл_костёр
