--- a/situations/Получил_по_голове_красным_плодом.yml
+++ b/situations/Получил_по_голове_красным_плодом.yml
@@ -4,4 +4,4 @@ text: |
   Вы продолжаете это делать в течении 5 минут, пока вы наконеч совсем не выбились из сил. Руки, в кусочках коры и ссадинах трясутся и вы садитесь под дерево. Вы слышите громкий свист. Вы поднимаете лицо и не успеваете понять, что происходит. Последнее, что вы увидели - это красный плод, который несётся со страшной скоростью прямо вам на голову.
 actions: 
 - text: Быть расплющенным красным плодом
-  situation: Конец_игры
+  next: Конец_игры
