--- a/situations/Попытка_открыть_глаза.yml
+++ b/situations/Попытка_открыть_глаза.yml
@@ -3,4 +3,4 @@ text: |
   Песчинки осыпаются с лица, а в глазах темнеет от нахлынувшего головокружения. На секунду всё уплывает в туман, но вы сжимаете кулаки и, превозмогая слабость, боретесь с темнотой, чтобы хоть ненадолго разглядеть то место, где оказались…
 actions: 
 - text: Сквозь пелену в глазах попытаться осмотреться
-  situation: Попытка_осмотреться
+  next: Попытка_осмотреться
