--- a/situations/Спасся_в_обломках.yml
+++ b/situations/Спасся_в_обломках.yml
@@ -1,6 +1,6 @@
 actions: 
 - text: Лечь спать
-  situation: Первое_утро_на_острове
+  next: Первое_утро_на_острове
   
 text: |
   Вы перекатываетесь на бок, и первый же рывок вперёд отзывается в теле жгучей болью — песок въедается в ссадины, но жажда и инстинкт выживания сильнее.
