--- a/situations/Найти_в_джунглях_красные_плоды.yml
+++ b/situations/Найти_в_джунглях_красные_плоды.yml
@@ -1,9 +1,11 @@
 text: |
-  Вы идёте по песчаному берегу и чувствуете себя хорошо. Силы медленно пребывают и вы уже в джунглевой глуши. На ваш взгляд попадает высокое дерево, по стволу которого вьются развесистые лианы. Вы поднимаете голову и видите на вершине ствола гроздь спелых красных плодов.
+  Вы идёте по песчаному берегу и чувствуете себя хорошо. Силы медленно пребывают и вы уже в джунглевой глуши. 
+  На ваш взгляд попадает высокое дерево, по стволу которого вьются развесистые лианы. Вы поднимаете голову и видите на вершине ствола гроздь спелых красных плодов.
+
 actions: 
 - text: Карабкаться и сорвать плоды
-  situation: Осмотрелся_и_собрал_плоды
+  next: Осмотрелся_и_собрал_плоды
 - text: Трясти дерево
-  situation: Получил_по_голове_красным_плодом
+  next: Получил_по_голове_красным_плодом
 - text: Пойти дальше
-  situation: Пошёл_дальше_и_был_задавлен_пальмой
+  next: Пошёл_дальше_и_был_задавлен_пальмой
