--- a/situations/Осмотр_корабля.yml
+++ b/situations/Осмотр_корабля.yml
@@ -10,6 +10,21 @@ text: |
   Дальше вы видите 3 ящика. Вы вскрываете первый.
   В нём вы нашли:
 
-  1️⃣. Хлеб. 
+  🍞. Хлеб. 
   10 буханок ржаного и 5 пшеничного хлеба лежат перед вами. 2 хлеба размокли и не пригодны для употребления.
-  Их вы
+  Их вы решили засыпать песком и кинуть в море. Но остальные двенадцать отлично подходили для бутербродов.
+
+  🧀. Сыр.
+  Целая головка пармезана! Это отличная находка. Сыр можно нарезать и положить на найденный хлеб, и получится
+  замечательный бутерброд. Теперь от голода вы скорее всего не умрёте.
+
+  🍕. Три коробки пиццы.
+  Три коробки с сырной пиццей, с пепперони и с мясной пиццей!
+  Теперь уж вы точно не проголодаетесь!
+
+   🔥. Трут.
+   Вы наконец-то сможете развести костёр!
+   
+actions:
+- text: Вернуться на берег
+  next: Первое_утро_на_острове
