--- a/situations/Попытка_осмотреться.yml
+++ b/situations/Попытка_осмотреться.yml
@@ -18,10 +18,10 @@ text: |
 actions: 
 
 - text: Ползти налево, к груде обломков
-  situation: Спасся_в_обломках
+  next: Спасся_в_обломках
 
 - text: Ползти прямо, к джунглям
-  situation: Загрызли_дикие_звери
+  next: Загрызли_дикие_звери
 
 - text: Так и ни на что и не решившись, снова потерять сознание от потери сил
-  situation: Смыло_штормом_в_океан
+  next: Смыло_штормом_в_океан
