--- a/situations/nachalo.yml
+++ b/situations/nachalo.yml
@@ -1,6 +1,6 @@
 actions: 
 - text: Собрав остатки сил с трудом открыть глаза и приподнять голову чтобы немного осмотреться...
-  next: Попытка_открыть_глаза
+  next: popitka_otkryt_glaza
 
 text: |
   Сознание возвращается медленно, сквозь густой туман боли.
