--- a/situations/osmotrelsa_i_sorval_plody.yml
+++ b/situations/osmotrelsa_i_sorval_plody.yml
@@ -3,6 +3,6 @@ text: |
   Вашему взору открылись горы, которые были в конце джунглей. Но джунгли оказались очень большими, и чтобы добраться до гор, нужно пересечь все джунгли. Крик в ночи оставлял мысли о том, что на острове могут обитать хищники. Вы слезли с дерева и ступили на рыхлую джунглевую почву.
 actions: 
 - text: Пойти дальше
-  next: Пошёл_дальше_и_погиб_в_схватке_с_тигром
+  next: poshel_dalshe_i_pogib_v_shvatke_s_tigrom
 - text: Вернуться к берегу
-  next: Вернулся_обратно_и_осмотрел_корабль
+  next: vernulsya_obratno_i_osmotrel_korabl
