--- a/situations/otpravilsa_v_jungli_i_nashel_kokosy_i_rodnik.yml
+++ b/situations/otpravilsa_v_jungli_i_nashel_kokosy_i_rodnik.yml
@@ -10,6 +10,6 @@ text: |
 
 actions: 
 - text: Бить по кокосу камнем
-  next: Вскрыл_кокос_и_добыл_кокосовую_воду
+  next: vskril_kokos_i_nshel_kokosovuyu_vodu
 - text: Сбросить кокос с возвышенности
-  next: Сбросил_кокос_и_разбился
+  next: sbrosil_kokos_i_razbilsa
