--- a/situations/popitka_osmotretsa.yml
+++ b/situations/popitka_osmotretsa.yml
@@ -18,10 +18,10 @@ text: |
 actions: 
 
 - text: Ползти налево, к груде обломков
-  next: Спасся_в_обломках
+  next: spassya_v_oblomkah
 
 - text: Ползти прямо, к джунглям
-  next: Загрызли_дикие_звери
+  next: zagrizly_dikie_zveri
 
 - text: Так и ни на что и не решившись, снова потерять сознание от потери сил
-  next: Смыло_штормом_в_океан
+  next: smilo_shtormom_v_okean
