--- a/situations/spassya_v_oblomkah.yml
+++ b/situations/spassya_v_oblomkah.yml
@@ -1,6 +1,6 @@
 actions: 
 - text: Лечь спать
-  next: Первое_утро_на_острове
+  next: pervoe_utro_na_ostrove
   
 text: |
   Вы перекатываетесь на бок, и первый же рывок вперёд отзывается в теле жгучей болью — песок въедается в ссадины, но жажда и инстинкт выживания сильнее.
