переименовал ситуации в сцены

--- a/scenes/nachalo.yml
+++ b/scenes/nachalo.yml
@@ -1,8 +1,7 @@
-image: images/start.jpg
+image: start.jpg
 actions: 
 - text: Собрав остатки сил с трудом открыть глаза и приподнять голову чтобы немного осмотреться...
   next: popitka_otkryt_glaza
-
 text: |
   Сознание возвращается медленно, сквозь густой туман боли.
   
