--- a/scenes/popitka_otkryt_glaza.yml
+++ b/scenes/popitka_otkryt_glaza.yml
@@ -1,6 +1,8 @@
+image: try_to_open_eyes.jpg
 text: |
   Веки будто налиты свинцом, но вы стискиваете зубы и заставляете их приподняться. Мир плывёт перед глазами, окрашенный в болезненные блики. Каждое движение даётся через силу — мышцы дрожат, шея ноет, но вы медленно, с трудом отрываете голову от песка.
   Песчинки осыпаются с лица, а в глазах темнеет от нахлынувшего головокружения. На секунду всё уплывает в туман, но вы сжимаете кулаки и, превозмогая слабость, боретесь с темнотой, чтобы хоть ненадолго разглядеть то место, где оказались…
+
 actions: 
 - text: Сквозь пелену в глазах попытаться осмотреться
   next: popitka_osmotretsa
@@ -8,3 +10,4 @@ state_change:
   thirst: 1
   hunger: 1
   health: -1
+  inventory: ['заноза в жопе']
